[FIX] website: fix value translation visibility
-- temporary fix commit (fw-port of the [FIX ON 14.0]) --

On translation editor, elements with translatable default values will get
a `<span/>` as translation value which stays visible until the content
is updated on the editor. This issue can be fixed on CSS for `placeholder`
and input `value` attributes (since we can select elements with attribute
translation on CSS). In this commit, we need to hide the text on JS until
the editor's code sets the right values on inputs & textareas.

task-3042522

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1606,6 +1606,9 @@ ul.o_checklist > li.o_checked::after {
 // "value" will get HTML content as translation value for the attributes.
 // The goal here is to hide these values until the editor's code sets the right
 // ones on elements.
+.o_text_hide {
+    color: transparent !important;
+}
 [placeholder*="data-oe-translation-id"] {
     &::-webkit-input-placeholder{ /* WebKit */
         color: transparent;
@@ -1615,6 +1618,9 @@ ul.o_checklist > li.o_checked::after {
         color: transparent;
         opacity: 0;
     }
+}
+input[value*="data-oe-translation-id"] {
+    @extend .o_text_hide;
 }
 
 //------------------------------------------------------------------------------
